test/error/MethodAbstractClassNormal.ci
public class Test
{
	abstract bool Run(); //ERROR: Abstract methods allowed only in an abstract class
}
